[gd_scene load_steps=8 format=1]

[ext_resource path="res://Scripts/welcome_npc.gd" type="Script" id=1]
[ext_resource path="res://Textures/sherif.png" type="Texture" id=2]
[ext_resource path="res://font.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Textures/gun.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 3.81447, 8.18929 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="welcome_npc" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="intro_text" type="RichTextLabel" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 72.0
margin/top = 92.0
margin/right = -48.0
margin/bottom = 52.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = 0
percent_visible = 0.0

[node name="pickup_guns" type="Area2D" parent="."]

transform/pos = Vector2( 30, 0 )
transform/scale = Vector2( 0.1875, 0.1875 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="right_gun" type="Sprite" parent="pickup_guns"]

texture = ExtResource( 4 )
offset = Vector2( 10, 0 )

[node name="left_gun" type="Sprite" parent="pickup_guns"]

texture = ExtResource( 4 )
offset = Vector2( -10, 0 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickup_guns"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="npc_exit" type="Area2D" parent="."]

transform/pos = Vector2( 70, 0 )
transform/scale = Vector2( 0.1875, 0.34375 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="npc_exit"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

rect = Rect2( -10, -10, 20, 20 )

[connection signal="area_enter" from="." to="." method="_on_welcome_npc_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_welcome_npc_body_enter"]

[connection signal="body_enter" from="pickup_guns" to="." method="_on_pickup_guns_body_enter"]

[connection signal="body_enter" from="npc_exit" to="." method="_on_npc_exit_body_enter"]

[connection signal="exit_screen" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_exit_screen"]


